put basic css styles and begining box expand functionality

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <section>Section One</section>
-    <section>Section Two</section>
-    <section>Section Three</section>
-
+    <div class="container">
+      <section>Section One</section>
+      <section>Section Two</section>
+      <section>Section Three</section>
+    </div>
     <script src="javascript/jquery.js"></script>
     <script src="javascript/main.js"></script>
   </body>
