--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
   </head>
   <body>
     <div class="container">
-      <section>Section One</section>
-      <section>Section Two</section>
-      <section>Section Three</section>
+    <section class="expanded section1">
+      <div>Section One</div>
+      <article>
+        This is our medium paragraph. Not to long not too short
+        basically it is meant to be just right. It has to be
+        a little longer than our short paragraph. But not
+        as long as our short paragraph.
+      </article>
+    </section>
+
+    <section class="shrunk section2">
+      <div>Section Two</div>
+      <article>
+        This paragraph is to demonstrate a short paragraph.
+        Basically we want this to work no matter the size.
+      </article>
+    </section>
+
+    <section class="shrunk section3">
+      <div>Section Three</div>
+      <article>
+        This paragraph is to demonstrate a long paragraph.
+        For this paragraph we will want to put some filler
+        text. Basically some text to make this longer.
+        I mean way longer than some of those other silly
+        paragraphs. This is like the mack daddy of paragraphs.
+        Are we done yet with it? Not quite we want to it be a
+        little longer. Ok done!
+      </article>
+    </section>
     </div>
     <script src="javascript/jquery.js"></script>
     <script src="javascript/main.js"></script>
